# Elka.VoiceMeeterFxHost

./: .gitignore  CMakeLists.txt  CMakePresets.json  Elka.VoiceMeeterFxHost.sln  README.md  VFX_COMMANDS.md  instruction.md
docs/: Architecture.md  BuildInstructions.md  CrashProtectionRecommendation.md  Dependencies.md  Publishing.md  RisksAndLimitations.md  VST2Workflow.md  VisualStudioRun.md  VoiceMeeterCallbackAnalysis.md
installer/: ElkaVoiceMeeterFxHost.iss
scripts/: publish-release.ps1  upload-release-assets.ps1
src/app-wpf/: App.xaml  App.xaml.cs  AppDataPaths.cs  Elka.VoiceMeeterFxHost.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  PluginGroupPropertiesWindow.cs  PluginNodePropertiesWindow.cs  PluginProbeGuard.cs  PluginScanProgressWindow.cs  PluginWorkerLocator.cs  Program.cs  RouteEditorWindow.xaml  RouteEditorWindow.xaml.cs  SinglePingWindow.xaml  SinglePingWindow.xaml.cs  VbanTextListener.cs  VfxCommandsWindow.cs  VfxTextCommandParser.cs
src/app-wpf/Properties/: launchSettings.json
src/app-wpf/Properties/PublishProfiles/: win-x64-framework-dependent.pubxml
src/app-wpf/Themes/: ElkaTheme.xaml
src/engine/: AudioBufferView.h  GainProcessor.h  RealtimeEngine.cpp  RealtimeEngine.h
src/insert_asio/: InsertAsioHost.cpp  InsertAsioHost.h
src/native_api/: FxHostNativeApi.cpp
src/persistence/: SettingsStore.h
src/plugin-worker/: Elka.PluginWorker.csproj  Program.cs
src/plugins/: PluginHostLayer.cpp  PluginHostLayer.h  RealtimePluginProcessor.h
src/routing/: ChannelLayout.h
src/voicemeeter/: VoicemeeterClient.cpp  VoicemeeterClient.h  VoicemeeterRemoteApi.cpp  VoicemeeterRemoteApi.h  VoicemeeterRemoteTypes.h
